5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1749_3093.log
== TEST (2019-05-15 19:20:30) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t = v 
t = e
t = d
while(V or E or D):
	t == X 
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:22:03) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t = 0
while(V or E or D):
	t == X 
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:22:48) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t = 0
while(V > E > D):
	t == X 
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:23:27) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t = V + D
while(V > E > D):
	t = X 
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:24:01) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t ==  V + D
while(V > E > D):
	t = X 
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:24:51) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t ==  V + D * E
while(V > E > D):
	t = 0 
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:25:17) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t ==  V + D * E
while(V > E < D):
	t = 0 
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:25:32) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t = V + D * E
while(V > E < D):
	t = 0 
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:26:50) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t = 
while(V > E < D):
	
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
File "XXXX", line 4
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:27:07) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t = V + E * V
while(V > E < D):
	
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:27:34) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
t = V + E + V
while(V > E < D):
	
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:28:34) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
total = V + E + V
while(V > E < D):
	if(total)
	
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
File "XXXX", line 6
    if(total)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:28:39) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))
total = V + E + V
while(V > E < D):
	
	
	
	print("total de votoria")
	print("total de empate")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:35:34) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))

total =

while(V > E > D):
	t = 0
	
	print(vitoria and empate(s.upper))




-- ERROR:
File "XXXX", line 5
    total =
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:36:07) 
-- CODE:
a = int(input("numero de vitoria :"))
b = int(input("numero de empate :"))
c = int(input("numero de derrota :"))

total = V + E + D

while(V > E > D):
	t = 0
	
	print(vitoria and empate(s.upper))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:38:17) 
-- CODE:
a = int(input("V para vitoria :"))
b = int(input("E para empate :"))
c = int(input("D para derrota :"))

total = V + E + D

while(V > E > D):
	t = 0
	
	print(vitoria and empate(s.upper))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:38:46) 
-- CODE:
a = int(input("V para vitoria :"))
b = int(input("E para empate :"))
c = int(input("D para derrota :"))

t == X

while(V > E > D):
	t = 0
	
	print(vitoria and empate(s.upper))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:38:55) 
-- CODE:
a = int(input("V para vitoria :"))
b = int(input("E para empate :"))
c = int(input("D para derrota :"))

t = X

while(V > E > D):
	t = 0
	
	print(vitoria and empate(s.upper))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:39:17) 
-- CODE:
a = int(input("V para vitoria :"))
b = int(input("E para empate :"))
c = int(input("D para derrota :"))

t = X

while(V > E > D):
	t == x
	
	print(vitoria and empate(s.upper))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:52:08) 
-- CODE:
a = int(input("V para vitoria :"))
b = int(input("E para empate :"))
c = int(input("D para derrota :"))

t = 

while(V > E + D):
	t =0
	
	print(vitoria and empate(s.upper))




-- ERROR:
File "XXXX", line 5
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:52:39) 
-- CODE:
a = int(input("V para vitoria :"))
b = int(input("E para empate :"))
c = int(input("D para derrota :"))

t = V + E + D

while(V > E + D):
	t =0
	
	print(vitoria and empate(s.upper))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:53:31) 
-- CODE:
a = int(input("V para vitoria :"))
b = int(input("E para empate :"))
c = int(input("D para derrota :"))

t = V + E - D

while(V > E + D):
	t =0
	
	print(vitoria and empate(s.upper))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
